tokenizer.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { SOURCE_FILE: peg$parseSOURCE_FILE },
      peg$startRuleFunction  = peg$parseSOURCE_FILE,

      peg$c0 = function(sourceFile) {
        return sourceFile.filter(n=>(n instanceof Array)?n.length:n);
      },
      peg$c1 = function(sourceStrings) {
        let tokens = [];
        sourceStrings.filter(n=>n).forEach(t=>{
          (t instanceof Array) ? tokens.push(...(t.filter(n=>n))) : tokens.push(t);
        });

        return tokens.length ? new Token('SourceTexts',tokens):null;
      },
      peg$c2 = /^[0-9a-zA-Z_]/,
      peg$c3 = peg$classExpectation([["0", "9"], ["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c4 = function(head, tail) {return new Token('Name',head + (tail ? tail.filter(n=>n).join(''):''));},
      peg$c5 = function(f, e) {return new Token('FloatConstant',parseFloat(f + (e || '')));},
      peg$c6 = function(f, e) {return new Token('FloatConstant',parseFloat(f + (e||'')));},
      peg$c7 = ".",
      peg$c8 = peg$literalExpectation(".", false),
      peg$c9 = /^[fF]/,
      peg$c10 = peg$classExpectation(["f", "F"], false, false),
      peg$c11 = "+",
      peg$c12 = peg$literalExpectation("+", false),
      peg$c13 = "-",
      peg$c14 = peg$literalExpectation("-", false),
      peg$c15 = /^[eE]/,
      peg$c16 = peg$classExpectation(["e", "E"], false, false),
      peg$c17 = function(value, uint) {
          return new Token(uint?'UintConstant':'IntConstant',value);
        },
      peg$c18 = /^[uU]/,
      peg$c19 = peg$classExpectation(["u", "U"], false, false),
      peg$c20 = function() {
          return parseInt(text(),10);
        },
      peg$c21 = "0",
      peg$c22 = peg$literalExpectation("0", false),
      peg$c23 = function(value) {
        return parseInt(value,8);
      },
      peg$c24 = /^[xX]/,
      peg$c25 = peg$classExpectation(["x", "X"], false, false),
      peg$c26 = function(value) {
        return parseInt(value,16);
      },
      peg$c27 = /^[0-7]/,
      peg$c28 = peg$classExpectation([["0", "7"]], false, false),
      peg$c29 = /^[a-fA-F]/,
      peg$c30 = peg$classExpectation([["a", "f"], ["A", "F"]], false, false),
      peg$c31 = /^[1-9]/,
      peg$c32 = peg$classExpectation([["1", "9"]], false, false),
      peg$c33 = /^[=<>!+\-*&|\/%\^]/,
      peg$c34 = peg$classExpectation(["=", "<", ">", "!", "+", "-", "*", "&", "|", "/", "%", "^"], false, false),
      peg$c35 = /^[=<>+\-&|]/,
      peg$c36 = peg$classExpectation(["=", "<", ">", "+", "-", "&", "|"], false, false),
      peg$c37 = function(head, tail) {return new Token('Operator',head + (tail ? tail.filter(n=>n).join(''):''));},
      peg$c38 = peg$anyExpectation(),
      peg$c39 = "/",
      peg$c40 = peg$literalExpectation("/", false),
      peg$c41 = "*",
      peg$c42 = peg$literalExpectation("*", false),
      peg$c43 = "%",
      peg$c44 = peg$literalExpectation("%", false),
      peg$c45 = "<",
      peg$c46 = peg$literalExpectation("<", false),
      peg$c47 = ">",
      peg$c48 = peg$literalExpectation(">", false),
      peg$c49 = "[",
      peg$c50 = peg$literalExpectation("[", false),
      peg$c51 = "]",
      peg$c52 = peg$literalExpectation("]", false),
      peg$c53 = "(",
      peg$c54 = peg$literalExpectation("(", false),
      peg$c55 = ")",
      peg$c56 = peg$literalExpectation(")", false),
      peg$c57 = "{",
      peg$c58 = peg$literalExpectation("{", false),
      peg$c59 = "}",
      peg$c60 = peg$literalExpectation("}", false),
      peg$c61 = "^",
      peg$c62 = peg$literalExpectation("^", false),
      peg$c63 = "|",
      peg$c64 = peg$literalExpectation("|", false),
      peg$c65 = "&",
      peg$c66 = peg$literalExpectation("&", false),
      peg$c67 = "~",
      peg$c68 = peg$literalExpectation("~", false),
      peg$c69 = "=",
      peg$c70 = peg$literalExpectation("=", false),
      peg$c71 = "!",
      peg$c72 = peg$literalExpectation("!", false),
      peg$c73 = ":",
      peg$c74 = peg$literalExpectation(":", false),
      peg$c75 = ",",
      peg$c76 = peg$literalExpectation(",", false),
      peg$c77 = "?",
      peg$c78 = peg$literalExpectation("?", false),
      peg$c79 = function(symbol) {return new Token('Symbol',text()); },
      peg$c80 = "#",
      peg$c81 = peg$literalExpectation("#", false),
      peg$c82 = function(head, tail) {
        const tokens = [];
        tail && tail.length && tokens.push(...tail.filter(n=>n)); 
        return new PreprocessorDirective(head,tokens);
      },
      peg$c83 = /^[\\]/,
      peg$c84 = peg$classExpectation(["\\"], false, false),
      peg$c85 = function() { return null;},
      peg$c86 = peg$otherExpectation("whitespace"),
      peg$c87 = "\t",
      peg$c88 = peg$literalExpectation("\t", false),
      peg$c89 = "\x0B",
      peg$c90 = peg$literalExpectation("\x0B", false),
      peg$c91 = "\f",
      peg$c92 = peg$literalExpectation("\f", false),
      peg$c93 = " ",
      peg$c94 = peg$literalExpectation(" ", false),
      peg$c95 = "\xA0",
      peg$c96 = peg$literalExpectation("\xA0", false),
      peg$c97 = "\uFEFF",
      peg$c98 = peg$literalExpectation("\uFEFF", false),
      peg$c99 = function() {
          return null; //new Token('WhiteSpace',' ');
        },
      peg$c100 = /^[ \xA0\u1680\u2000-\u200A\u202F\u205F\u3000]/,
      peg$c101 = peg$classExpectation([" ", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u202F", "\u205F", "\u3000"], false, false),
      peg$c102 = /^[\n\r\u2028\u2029]/,
      peg$c103 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c104 = function() {return new Token('NewLine','\n');},
      peg$c105 = peg$otherExpectation("end of line"),
      peg$c106 = "\n",
      peg$c107 = peg$literalExpectation("\n", false),
      peg$c108 = "\r\n",
      peg$c109 = peg$literalExpectation("\r\n", false),
      peg$c110 = "\r",
      peg$c111 = peg$literalExpectation("\r", false),
      peg$c112 = "\u2028",
      peg$c113 = peg$literalExpectation("\u2028", false),
      peg$c114 = "\u2029",
      peg$c115 = peg$literalExpectation("\u2029", false),
      peg$c116 = function() {return null;/*new Token('NewLine','\n');*/},
      peg$c117 = peg$otherExpectation("comment"),
      peg$c118 = "/*",
      peg$c119 = peg$literalExpectation("/*", false),
      peg$c120 = "*/",
      peg$c121 = peg$literalExpectation("*/", false),
      peg$c122 = function(text) {
          return null;//new Token('WhiteSpace',' ');
        },
      peg$c123 = "//",
      peg$c124 = peg$literalExpectation("//", false),
      peg$c125 = function(text) {
          return null;//new Token('WhiteSpace',' ');    
        },
      peg$c126 = function(skipped) {
          skipped = skipped.filter(n=>n);
          
          if(skipped.length == 1){
            skipped = skipped[0];
          } else if (!skipped.length){
            skipped = null;
          }

          return skipped;
        },
      peg$c127 = function(skipped) {
          return skipped;
        },
      peg$c128 = ";",
      peg$c129 = peg$literalExpectation(";", false),
      peg$c130 = function() {return new Token('EOS',text());},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseSOURCE_FILE() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsePREPROCESSOR_DIRECTIVE();
    if (s2 === peg$FAILED) {
      s2 = peg$parseSOURCE_STRINGS();
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsePREPROCESSOR_DIRECTIVE();
      if (s2 === peg$FAILED) {
        s2 = peg$parseSOURCE_STRINGS();
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseSOURCE_STRINGS() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseFLOATING_CONSTANT();
    if (s2 === peg$FAILED) {
      s2 = peg$parseINTEGER_CONSTANT();
      if (s2 === peg$FAILED) {
        s2 = peg$parseOPERATOR();
        if (s2 === peg$FAILED) {
          s2 = peg$parseNAME();
          if (s2 === peg$FAILED) {
            s2 = peg$parseSYMBOLS();
            if (s2 === peg$FAILED) {
              s2 = peg$parseEOS();
              if (s2 === peg$FAILED) {
                s2 = peg$parseCONCATENATE_CHAR();
                if (s2 === peg$FAILED) {
                  s2 = peg$parse__();
                }
              }
            }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseFLOATING_CONSTANT();
        if (s2 === peg$FAILED) {
          s2 = peg$parseINTEGER_CONSTANT();
          if (s2 === peg$FAILED) {
            s2 = peg$parseOPERATOR();
            if (s2 === peg$FAILED) {
              s2 = peg$parseNAME();
              if (s2 === peg$FAILED) {
                s2 = peg$parseSYMBOLS();
                if (s2 === peg$FAILED) {
                  s2 = peg$parseEOS();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseCONCATENATE_CHAR();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parse__();
                    }
                  }
                }
              }
            }
          }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNAME() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (peg$c2.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      if (peg$c2.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s3 === peg$FAILED) {
        s3 = peg$parseCONCATENATE_CHAR();
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        if (peg$c2.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s3 === peg$FAILED) {
          s3 = peg$parseCONCATENATE_CHAR();
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFLOATING_CONSTANT() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseFRACTIONAL_CONSTANT();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEXPONENT_PART();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseFLOATING_SUFFIX();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseDIGIT_SEQUENCE();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseEXPONENT_PART();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseFLOATING_SUFFIX();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseFRACTIONAL_CONSTANT() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseDIGIT_SEQUENCE();
    if (s2 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 46) {
        s3 = peg$c7;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseDIGIT_SEQUENCE();
        if (s4 !== peg$FAILED) {
          s2 = [s2, s3, s4];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 46) {
        s2 = peg$c7;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDIGIT_SEQUENCE();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = peg$parseDIGIT_SEQUENCE();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 46) {
            s3 = peg$c7;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s3 !== peg$FAILED) {
            s2 = [s2, s3];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      }
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseFLOATING_SUFFIX() {
    var s0;

    if (peg$c9.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }

    return s0;
  }

  function peg$parseSIGN() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 43) {
      s0 = peg$c11;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 45) {
        s0 = peg$c13;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
    }

    return s0;
  }

  function peg$parseDIGIT_SEQUENCE() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseDIGIT();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseDIGIT();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseEXPONENT_PART() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (peg$c15.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parseSIGN();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseDIGIT_SEQUENCE();
        if (s4 !== peg$FAILED) {
          s2 = [s2, s3, s4];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseINTEGER_CONSTANT() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseDECIMAL_CONSTANT();
    if (s1 === peg$FAILED) {
      s1 = peg$parseOCTAL_CONSTANT();
      if (s1 === peg$FAILED) {
        s1 = peg$parseHEXADECIMAL_CONSTANT();
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseINTEGER_SUFFIX();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseINTEGER_SUFFIX() {
    var s0;

    if (peg$c18.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }

    return s0;
  }

  function peg$parseDECIMAL_CONSTANT() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$currPos;
    s3 = peg$parseNONZERO_DIGIT();
    if (s3 !== peg$FAILED) {
      s4 = [];
      s5 = peg$parseDIGIT();
      if (s5 !== peg$FAILED) {
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$parseDIGIT();
        }
      } else {
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c20();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseOCTAL_CONSTANT() {
    var s0, s1, s2, s3;
